k8s/monitoring/prome-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - '--config.file=/etc/prometheus/prome-configmap.yaml'
            - '--storage.tsdb.path=/prometheus'
            - '--log.format=json'
            - '--enable-feature=exemplar-storage'
            - '--web.enable-remote-write-receiver'
          ports:
            - containerPort: 9090
              name: web
          readinessProbe:
            httpGet:
              path: /-/healthy
              port: web
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/
            - name: data-volume
              mountPath: /prometheus
            - name: rules-volume
              mountPath: /etc/prometheus-rules/
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
        - name: data-volume
          emptyDir: {}  
        - name: rules-volume
          configMap:
            name: prometheus-alert-rules
