k8s/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: monitoring-cert
    kubernetes.io/ingress.global-static-ip-name: "monitoring-ip"

spec:
  rules:
    - host: prometheus.wondrdesktop.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: grafana.wondrdesktop.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
